# vidpiper

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  detect_scenes.py  exec_sum_prompt_template.md  fmt_outputs.dvc  format_summaries.py  generate_summary.py  process_scenes.py  pyproject.toml  requirements.txt  sum_outputs.dvc  summerizer_cli.py  test_results.txt  vid.dvc  vid_summerizer.py  vidpiper.sh  vidpiper_cli.py
fmt_outputs/: a-deep-dive-into-neural-networks-for-perception_fmt.md  a-journy-to-improved-llm-serving-performance_fmt.md  ai-research-careers-from-research-to-reality_fmt.md  airspeed-data-generation_fmt.md  an-ai-team-lead-guide_fmt.md  bridging-performance-and-flexibility-in-network-architecture_fmt.md  distributed-light-baking-system-powered-by-optix-7_fmt.md  end-to-end-vla-model-driven-by-synthetic-big-data_fmt.md  enhance-surgical-efficiency-with-concurrent-on-edge-ai_fmt.md  european-robotics-startup-showcases_fmt.md  evolution-of-img-and-video-processing-methods-accelerated-by-gpu_fmt.md  gpu-accelerated-intel-in-life-science_fmt.md  gpu-accelerated-semiconductor-process-simulations_fmt.md  iat-auto-industrial-design_fmt.md  intelligent-industrial-robotics-from-sim-to-low-code-deployment_fmt.md  laiye-ai-foundry-nvidia-ai-enterprise_fmt.md  mpowering-innovation-startups-enabling-scientific-breakthroughs_fmt.md  near-real-time-fire-detection-leveraging-edge-ai-in-space_fmt.md  next-ai-opportunity-in-china_fmt.md  nvaie-for-edge-to-cloud-data-loop_fmt.md  pave-to-ai-compute-fabric_fmt.md  preserving-a-medieval-tower-in-italy-using-digital-twin_fmt.md  rag-method-for-auto-chatbot_fmt.md  simready-3d-assets-auto-construction-method_fmt.md
standalone_stages/: detect_scenes.py  format_summaries.py  generate_summary.py  process_scenes.py  update_summary.py
(+40 files in other folders)
